Closed
Bug 1501138
Opened 7 years ago
Closed 7 years ago
Bug 1437064 caused failures on comm-central
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | fixed |
| firefox65 | --- | fixed |
People
(Reporter: darktrojan, Assigned: farre)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
I've come to the conclusion that bug 1437064 is what caused a bunch of failures on comm-central. Only on Linux for some reason. All of the failures showed up with perma-fails on our automation when this bug landed, and disappear if it is backed out.
Bug 1499240 and bug 1499286, which both seem to be caused by oncommand events not firing on textboxes (my understanding is that oncommand only fires if the user stops typing, so there's a timer involved somehow), and bug 1499316, which directly involves setTimeout.
I can understand if you're not interested in Thunderbird's problems, but there might be something in this that breaks Firefox too.
| Reporter | ||
Updated•7 years ago
|
Flags: needinfo?(afarre)
| Assignee | ||
Comment 1•7 years ago
|
||
Can you point me to some logs for this, or better yet point me to how I can build/debug this issue myself?
Flags: needinfo?(afarre)
Comment 2•7 years ago
|
||
If you're prepared to build Thunderbird, here are the instructions:
https://developer.mozilla.org/en-US/docs/Mozilla/Developer_guide/Build_Instructions/Simple_Thunderbird_build
It would have to be on Linux since the tests only fail there. I can let you know how to run those tests.
Or maybe investigate why textboxes don't seem to fire oncommand, see our fix here:
https://hg.mozilla.org/comm-central/rev/379f94cf13ee#l1.21
and proposed fix in attachment 9017461 [details] [diff] [review].
Best to catch us on IRC's #maildev channel.
Updated•7 years ago
|
Priority: -- → P2
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → afarre
| Assignee | ||
Comment 4•7 years ago
|
||
Updated•7 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•7 years ago
|
||
Comment 6•7 years ago
|
||
My developer has been debugging this for several hours, and came up with the exact same fix. He wanted to post it here and found that you had been working on it and found the same fix :).
Comment 7•7 years ago
|
||
Could you please land this ASAP? This has been causing lots of test failures on our end, and the hot fixes to it have caused further problems down, and the hotfixes to that hotfix have again caused other bugs.
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9daebaa1526d
Make sure that timeout iterator advances. r=peterv
Comment 9•7 years ago
|
||
r+ from our side.
We found the same fix, independent from you, which gives confidence in the fix. We also verified that this patch fixes the test failure we'd been fighting. The test had been passing before bug 1437064, fails with bug 1437064 and without this fix, and passes with this fix.
| Assignee | ||
Comment 10•7 years ago
|
||
Comment on attachment 9023636 [details]
Bug 1501138 - Make sure that timeout iterator advances.
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1437064
User impact if declined: Breaks setTimeout which is a big deal
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: No
Needs manual test from QE?: No
If yes, steps to reproduce: The tests that managed to expose this issue are actually thunderbird tests, see for example Bug 1499240. So str becomes, for example:
1 Build Thunderbird
2 cd to obj dir
3 Run make SOLO_TEST=subscribe/test-subscribe-news-filter.js mozmill-one
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): The change is small and well contained and doesn't add any new code paths.
String changes made/needed:
Attachment #9023636 -
Flags: approval-mozilla-beta?
Comment 11•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment 12•7 years ago
|
||
Yay! :-)
Updated•7 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → affected
status-firefox-esr60:
--- → unaffected
Keywords: regression
Comment 13•7 years ago
|
||
Comment on attachment 9023636 [details]
Bug 1501138 - Make sure that timeout iterator advances.
fix a regression with timeouts exposed by tb tests, approved for 64.0b9
Attachment #9023636 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 14•7 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•