Bug 1501138 - Make sure that timeout iterator advances. r=peterv a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D11327